exports[`Figure`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }>
    <div
      className="slds-media">
      <div
        className="slds-media__figure">
        <img
          alt="Placeholder"
          src="/assets/images/avatar1.jpg"
          style={
            Object {
              "height": 100,
            }
          } />
      </div>
      <div
        className="slds-media__body">
        <p>
          Sit nulla est ex deserunt exercitation anim occaecat.
          Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
          Mollit officia cillum Lorem ullamco minim nostrud elit officia tempor esse quis.
        </p>
      </div>
    </div>
  </div>
  <a
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }>
    ?
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }>
    <a
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }>
      ×
    </a>
    <div
      style={undefined}>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }>
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }>
            MediaObject
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }>
            Figure
          </h2>
        </div>
        <div
          style={
            Object {
              "marginBottom": 0,
            }
          }>
          <p
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "
                  -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                  \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
                ",
                "fontSize": "15px",
              }
            }>
            Media Object with figure in left
          </p>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }>
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  <
                  MediaObject
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}>
                      figureLeft
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}>
                        <span>
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }>
                            <img />
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                    
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  >
                </span>
              </div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    <
                    p
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    >
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 48,
                      "paddingRight": 3,
                    }
                  }>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    Sit nulla est ex deserunt exercitation anim occaecat.
                    Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
                    Mollit officia cillum Lorem ullamco minim nostrud elit officia tempor esse quis.
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    </
                    p
                    >
                  </span>
                </div>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  </
                  MediaObject
                  >
                </span>
              </div>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }>
              \"
              MediaObject
              \" Component
            </h2>
            <table
              style={
                Object {
                  "borderCollapse": "separate",
                  "borderSpacing": "10px 5px",
                  "marginLeft": -10,
                }
              }>
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    children
                  </td>
                  <td>
                    node
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    figureCenter
                  </td>
                  <td>
                    node
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    figureLeft
                  </td>
                  <td>
                    node
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    figureRight
                  </td>
                  <td>
                    node
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Figure - Both Side`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }>
    <div
      className="slds-media">
      <div
        className="slds-media__figure">
        <img
          alt="Placeholder"
          src="/assets/images/avatar1.jpg"
          style={
            Object {
              "height": 100,
            }
          } />
      </div>
      <div
        className="slds-media__body">
        <p>
          Sit nulla est ex deserunt exercitation anim occaecat.
          Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
          Mollit officia cillum Lorem ullamco minim nostrud elit officia tempor esse quis.
        </p>
      </div>
      <div
        className="slds-media__figure slds-media__figure--reverse">
        <img
          alt="Placeholder"
          src="/assets/images/avatar2.jpg"
          style={
            Object {
              "height": 100,
            }
          } />
      </div>
    </div>
  </div>
  <a
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }>
    ?
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }>
    <a
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }>
      ×
    </a>
    <div
      style={undefined}>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }>
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }>
            MediaObject
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }>
            Figure - Both Side
          </h2>
        </div>
        <div
          style={
            Object {
              "marginBottom": 0,
            }
          }>
          <p
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "
                  -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                  \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
                ",
                "fontSize": "15px",
              }
            }>
            Media Object with figure in left and right
          </p>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }>
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  <
                  MediaObject
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}>
                      figureLeft
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}>
                        <span>
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }>
                            <img />
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}>
                      figureRight
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}>
                        <span>
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }>
                            <img />
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                    
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  >
                </span>
              </div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    <
                    p
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    >
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 48,
                      "paddingRight": 3,
                    }
                  }>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    Sit nulla est ex deserunt exercitation anim occaecat.
                    Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
                    Mollit officia cillum Lorem ullamco minim nostrud elit officia tempor esse quis.
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    </
                    p
                    >
                  </span>
                </div>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  </
                  MediaObject
                  >
                </span>
              </div>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }>
              \"
              MediaObject
              \" Component
            </h2>
            <table
              style={
                Object {
                  "borderCollapse": "separate",
                  "borderSpacing": "10px 5px",
                  "marginLeft": -10,
                }
              }>
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    children
                  </td>
                  <td>
                    node
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    figureCenter
                  </td>
                  <td>
                    node
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    figureLeft
                  </td>
                  <td>
                    node
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    figureRight
                  </td>
                  <td>
                    node
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Figure - Reverse`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }>
    <div
      className="slds-media">
      <div
        className="slds-media__body">
        <p>
          Sit nulla est ex deserunt exercitation anim occaecat.
          Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
          Mollit officia cillum Lorem ullamco minim nostrud elit officia tempor esse quis.
        </p>
      </div>
      <div
        className="slds-media__figure slds-media__figure--reverse">
        <img
          alt="Placeholder"
          src="/assets/images/avatar2.jpg"
          style={
            Object {
              "height": 100,
            }
          } />
      </div>
    </div>
  </div>
  <a
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }>
    ?
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }>
    <a
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }>
      ×
    </a>
    <div
      style={undefined}>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }>
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }>
            MediaObject
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }>
            Figure - Reverse
          </h2>
        </div>
        <div
          style={
            Object {
              "marginBottom": 0,
            }
          }>
          <p
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "
                  -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                  \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
                ",
                "fontSize": "15px",
              }
            }>
            Media Object with figure in right
          </p>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }>
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  <
                  MediaObject
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}>
                      figureRight
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}>
                        <span>
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }>
                            <img />
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                    
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  >
                </span>
              </div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    <
                    p
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    >
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 48,
                      "paddingRight": 3,
                    }
                  }>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    Sit nulla est ex deserunt exercitation anim occaecat.
                    Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
                    Mollit officia cillum Lorem ullamco minim nostrud elit officia tempor esse quis.
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    </
                    p
                    >
                  </span>
                </div>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  </
                  MediaObject
                  >
                </span>
              </div>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }>
              \"
              MediaObject
              \" Component
            </h2>
            <table
              style={
                Object {
                  "borderCollapse": "separate",
                  "borderSpacing": "10px 5px",
                  "marginLeft": -10,
                }
              }>
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    children
                  </td>
                  <td>
                    node
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    figureCenter
                  </td>
                  <td>
                    node
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    figureLeft
                  </td>
                  <td>
                    node
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    figureRight
                  </td>
                  <td>
                    node
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
